2008-04-22  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-interp.c (syx_interp_do_special): fix block self return
	(syx_interp_swap_context): implemented

2008-04-21  Luca Bruno  <lethalman88@gmail.com>

        * syx/syx-interp.c (_syx_interp_context_update): added
        (syx_interp_push_block_closure): update this_context to point to the new detached frame
        (syx_interp_frame_to_context): set arguments not accessible for now, not good for Smalltalk-side future debugging
        This fixes basic of the exception handling.

2008-04-20  Luca Bruno  <lethalman88@gmail.com>

        * st/kernel/Number.st (to:by:do, to:by:reverseDo): slightly optimized

        * syx/syx-primitives.c (Processor_enter): wrong argument
        (Processor_swapWith): wrong argument

        * syx/syx-interp.c (syx_interp_enter_context): missed saving this_context
        (syx_interp_context_to_frame): added

        * syx/syx-primitives.c (ContextPart_receiver): added
        (BlockContext_outerContext): added

        * st/kernel/BlockContext.st (outerContext, homeContext): 

        * st/kernel/ContextPart.st (tracebackString):

        * syx/syx-interp.h (struct SyxInterpFrame): add closure

        * syx/syx-object.h: updated accessors
        All calls have been updated.

        * syx/syx-enums.h (enum): add ContextPart enums

        * st/kernel/initialDecl.st: move receiver to MethodContext and add framePointer to ContextPart

        * syx/syx-interp.c (syx_interp_frame_to_context): made public
        (syx_interp_frame_to_context): use closure

        * syx/syx-primitives.c (_syx_primitive_entries):
        (ContextPart_parent): added

        * syx/syx-parser.c (_syx_parser_find_temporary_name): cleaned up, fixes the command line interactive interpreter

        * st/kernel/Console.st (nextLine):

        * syx/syx-interp.c (_syx_interp_switch_process): only switch if it's a different process

        * syx/syx-interp.h (struct SyxInterpState): added process